--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <h1>Call App</h1>
     
     <h3 id="peerIdDisplay">Your User Id Will Appear Here....</h3>
-        <input type="text" id="peerIdInput" placeholder="Enter User Id Here" />
-        <button id="callBtn">Call</button>
+<div class="div1">
+    <input type="text" id="peerIdInput" placeholder="Enter User Id Here" />
+    <button id="callBtn">Call</button>
+</div>
+<div class="div2">
     <video id="localVideo" autoplay muted></video>
-    <p></p>
     <video id="remoteVideo" autoplay></video>
+</div>
     <script src="app.js"></script>
 </body>
 
